--- a/dashboard.html
+++ b/dashboard.html
@@ -56,13 +56,20 @@
 .pro-modal__body {
   padding: 18px;
   display:grid;
-  grid-template-columns: 280px minmax(0,1fr);
-  gap: 16px;
+  grid-template-columns: minmax(220px, 270px) minmax(0,1fr);
+  gap: 20px;
   overflow-y: auto;
   flex: 1;
   min-height: 0;
+  align-items: stretch;
 }
-@media (max-width: 860px) { .pro-modal__body { grid-template-columns: 1fr; } }
+.pro-modal__body > * { min-width:0; }
+@media (max-width: 860px) {
+  .pro-modal__body {
+    grid-template-columns: 1fr;
+    gap: 16px;
+  }
+}
 
 .pro-meta {
   background: #f8fafc; border: 1px solid #e5e7eb; border-radius: 14px; padding: 12px;
@@ -71,11 +78,33 @@
 .pro-meta__label { font-size:.8rem; color:#64748b; }
 .pro-meta__value { font-size:.95rem; color:#0f172a; word-break:break-word; overflow-wrap:anywhere; }
 
-.pro-body-card { background:#ffffff; border:1px solid #e5e7eb; border-radius: 14px; overflow:hidden; }
-.pro-body-card__title { padding:10px 12px; font-weight:600; color:#0f172a; background:#f8fafc; border-bottom:1px solid #e5e7eb; }
+.pro-body-card {
+  background:#ffffff;
+  border:1px solid #e5e7eb;
+  border-radius: 14px;
+  overflow:hidden;
+  display:flex;
+  flex-direction:column;
+  min-height:0;
+}
+.pro-body-card__title { padding:10px 14px; font-weight:600; color:#0f172a; background:#f8fafc; border-bottom:1px solid #e5e7eb; }
 .pro-body-card__content {
-  padding: 14px 12px; min-height:220px;
-  white-space: pre-wrap; line-height:1.55; color:#111827;
+  padding: 16px 14px;
+  white-space: pre-wrap;
+  line-height:1.55;
+  color:#111827;
+  min-height:0;
+}
+#ed-body {
+  overflow-y: auto;
+  max-height: clamp(280px, calc(80vh - 240px), 680px);
+  padding-right: 4px;
+  scrollbar-gutter: stable;
+}
+@media (max-width: 860px) {
+  #ed-body {
+    max-height: none;
+  }
 }
 .pro-modal__footer { padding: 12px 18px; display:flex; justify-content:flex-end; gap: 10px; border-top:1px solid #e5e7eb; background:#fff; }
 
@@ -112,7 +141,7 @@
 
 .modal-overlay.show { opacity: 1; display: flex; }
 .modal {
-    background: white; border-radius: 20px; width: 90%; max-width: 900px;
+    background: white; border-radius: 20px; width: 94%; max-width: 1040px;
     box-shadow: 0 25px 50px rgba(0, 0, 0, 0.3);
     transform: scale(0.95); transition: transform 0.3s ease;
     display: flex; flex-direction: column; max-height: 90vh;
@@ -6462,6 +6491,7 @@ if (adminTabLink) {
 
 </body>
 </html>
+
 
 
 
